srcs/frontend/trans/style.css
body
{
    background: linear-gradient(135deg, #1a1a1d, #0f2027);
    color: #fff;
    font-family: 'Orbitron', sans-serif;
}

header, footer
{
    background-color: #111;
    color: #39ff14;
    box-shadow: 0 0 15px #ff00c8;
    text-align: center;
    padding: 1rem;
}

footer
{
	position: relative;
	bottom: 7px;
}

h1
{
    font-size: 3rem;
    text-shadow: 0 0 5px #ff00ff, 0 0 10px #ff00ff, 0 0 20px #ff00ff;
    color: #00fff7;
}

button
{
    background: linear-gradient(to right, #ff0080, #7928ca);
    color: white;
    border: none;
    padding: 0.5rem 1rem;
    margin: 0.5rem;
    border-radius: 8px;
    box-shadow: 0 0 10px #ff00ff;
    transition: transform 0.2s ease-in-out;
}

button:hover
{
    transform: scale(1.1);
    box-shadow: 0 0 20px #00fff7;
}

input
{
    background-color: #222;
    border: 1px solid #ff00ff;
    color: #fff;
    padding: 0.4rem;
    margin: 0.3rem 0;
    border-radius: 4px;
}

label
{
    color: #ff00ff;
}

hr
{
    border: none;
    height: 1px;
    background: linear-gradient(to right, #ff00ff, #00fff7);
    margin: 2rem 0;
}

/*
.container
{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

canvas
{
	border-radius: 50%;
    background-color: #222;
    border: 5px solid #fff;
}
*/

body {
	background-image: url('./assets/2Dtable.png');
	background-size: cover;
	background-position: center;
	margin: 0;
	font-family: 'Orbitron', sans-serif;
}

#frameContainer {
	position: relative;
	width: 100vw;
	height: 100vh;
	overflow: hidden;
}

#uiLayer {
	position: absolute;
	width: 100;
	height: 100%;
	z-index: 5;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

#controls {
	position: absolute;
	top: 20px;
	display: flex;
	gap: 20px;
	font-size: 20px;
	z-index: 20;
}

#fullFrameOverlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 103%;
	height: 100%;
	object-fit: fill;
	z-index: 10;
	pointer-events: none;
}

